Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-5589

Misc *.hx source files do not compile anymore

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.16.0
    • 0.17.0
    • Haxe - Compiler
    • None
    • Patch Available

    Description

      Certain hx source files actually don't compile and/or can be removed, because they are never used. Also, initialisation with IDL constants does not work properly.

      The default behaviour of the haxe compiler does only compile files and classes that are referenced anywhere in the code, which can make it hard to spot such problems. 

       

      Attachments

        Issue Links

          Activity

            People

              jensg Jens Geyer
              jensg Jens Geyer
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 0.5h
                  0.5h