THRIFT-5589 Haxe compiler/runtime fixes Client: hx Patch: Jens Geyer